(fix) fixed uneven coloring between li components in navbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2547,7 +2547,7 @@
 			}
 
 				#header > nav ul li {
-					border-top: solid 2px #5ccfb0;
+					border-top: solid 2px #4A7BA5;
 					display: block;
 					padding: 0;
 				}
